Revert "Update index.html"
This reverts commit 263a7cd8910083fd28c7dc576eac5cc8cd944b03.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <div>
   <h1>Hello World</h1>
 
-<h2>Welcome to my fabulous website</h2>
+<h2>Welcome to my amazing website</h2>
 
 <img src="./duck.jpg" alt="a local image" width="200px">
 
